--- a/index.html
+++ b/index.html
@@ -50,6 +50,15 @@
 
 
 <script src="js/config.js"></script>
+
+<!-- plugin registry + plugins -->
+<script src="js/modules/registry.js"></script>
+<script src="js/modules/buttonToggle.js"></script>
+<script src="js/modules/flipCard.js"></script>
+<script src="js/modules/quizChoice.js"></script>
+
+<!-- driver last -->
 <script src="js/driver.js"></script>
+
 
 </body></html>
